# adventofcode2024

./: README.md  adventofcode2024.opam  dune-project  main.opam
dune.lock/: lock.dune
lib/: dune
ppx_aoc_runner/: dune  ppx_aoc_runner.ml
src/: Day1.ml  Day2.ml  Day3.ml  Day4.ml  Helpers.ml  dune  main.ml  text.txt
test/: dune
