(lang dune 3.17)

(name adventofcode2024)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Aron Adler <aron@adler.dev>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name adventofcode2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
