(lang dune 3.16)

(name main)

(generate_opam_files true)

(source
 (github Arrow7000/adventofcode2024))

(authors "Aron Adler <aron@adler.dev>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name main)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml ppx_blob)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
